--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,7 @@
 parameters:
 	level: 6
 	paths:
+		- %currentWorkingDirectory%/index.php
 		- %currentWorkingDirectory%/classes
 	bootstrapFiles:
 		- %currentWorkingDirectory%/tests/php/static-analysis-stubs/symbols.php
